--- a/404.md
+++ b/404.md
@@ -8,7 +8,7 @@
 			<!---start-header---->
 				<div class="header">
 					<div class="logo">
-						<h1><a href="#">Ohh</a></h1>
+						<h1><a href="https://somj57.github.io">Go Back To Home</a></h1>
 					</div>
 				</div>
 			<!---End-header---->
